<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_blue"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.ycorp.kamustkj.MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:id="@+id/TextView01"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvsatu"
        android:textColor="@color/textColorPrimary"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/txtKata"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/petunjuksatu"
        android:textColor="@color/textColorPrimary"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnTerjemah"
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:background="@color/textColorPrimary"
        android:onClick="getTerjemahan"
        android:text="@string/btsatu"
        android:layout_gravity="center"
        android:textColor="@color/colorAccent"
        android:textSize="15sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/TextView02"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvdua"
        android:textColor="@color/textColorPrimary"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/txtArti"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:editable="false"
        android:hint="@string/petunjukdua"
        android:textColor="@color/textColorPrimary"
        android:textIsSelectable="true"
        android:textSize="18sp"
        android:textStyle="bold" />

</LinearLayout>
