<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/background_blue"
    android:scrollbars="none">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:weightSum="1"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context="com.ycorp.kamustkj.Main3Activity">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />

        <ImageView
            android:id="@+id/imageViewsatu"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_below="@+id/toolbar"
            android:layout_centerHorizontal="true"
            android:layout_gravity="top"
            android:background="@drawable/logo_kamus_tkj"
            android:contentDescription="@string/deskripsilogo" />

        <TextView
            android:id="@+id/TextView05"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/imageViewsatu"
            android:gravity="center"
            android:paddingTop="10dp"
            android:text="@string/tvenam"
            android:textColor="@color/textColorPrimary"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/TextView06"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/TextView05"
            android:paddingTop="10dp"
            android:text="@string/tvtujuh"
            android:textColor="@color/textColorPrimary"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/TextView07"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/TextView06"
            android:paddingTop="10dp"
            android:text="@string/tvdelapan"
            android:textColor="@color/textColorPrimary"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/TextView08"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/TextView07"
            android:paddingTop="10dp"
            android:text="@string/tvsembilan"
            android:textColor="@color/textColorPrimary"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/TextView09"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/TextView08"
            android:paddingTop="10dp"
            android:text="@string/tvsepuluh"
            android:textColor="@color/textColorPrimary"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/TextView10"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/TextView09"
            android:text="@string/tvsebelas"
            android:textColor="@color/textColorPrimary"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/TextView11"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/TextView10"
            android:paddingTop="10dp"
            android:text="@string/tvduabelas"
            android:textColor="@color/textColorPrimary"
            android:textSize="18sp"
            android:textStyle="bold" />

    </RelativeLayout>
</ScrollView>
